--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
             steps {
                 script {
                     // Build Docker image
-                    docker.build("${calculator}", '.')
+                    docker.build("${DOCKER_IMAGE_NAME}", '.')
                 }
             }
         }
